#pragma once




class BattleInfo
{
public:
    virtual ~BattleInfo() {}
};
